# Trinity

./: .env.template  .gitignore  README.md  docker-compose-dev.yml  docker-compose-prod.yml  prometheus.yml  reaload_dev.sh  script_fixture_product.py
back/: .dockerignore  .flake8  .gitignore  Dockerfile.dev  Dockerfile.prod  alembic.ini  coverage.ini  main.py  pyproject.toml  pytest.ini  readme.md  requirements.txt
back/alembic/: env.py
back/api/: __init__.py
back/core/: config.py  logger.py
back/core/helpers/: __init__.py  jwt.py
back/db/: __init__.py  events.py  seed.py  session.py
back/db/models/: models.py
back/db/schemas/: address_schemas.py  auth_schemas.py  cart_items_schemas.py  cart_schemas.py  category_schemas.py  invoice_items_schemas.py  invoices_schemas.py  kpis_schemas.py  product_schemas.py  roles_schemas.py  schemas.py  stock_schemas.py  users_schemas.py  wishlist_schemas.py
back/db/scripts-db/: DB-pgsql.sql  addresses.json  cart.json  cart_item.json  invoices.json  invoices_item.json  script_fixture_product.py  stocks.json  wishlist.json
back/db/scripts_db/: products_V1.json  script_fixture_product.py  users.json
back/repositories/: address_repository.py  auth_repository.py  cart_item_repository.py  cart_repository.py  category_repository.py  client_cart_repository.py  invoice_item_repository.py  invoice_repository.py  kpi_repository.py  product_repository.py  role_repository.py  stock_repository.py  user_repository.py  wishlist_repository.py
back/services/: __init__.py  address_service.py  auth_service.py  cart_item_service.py  cart_service.py  category_service.py  client_cart_service.py  invoice_item_service.py  invoice_service.py  kpi_service.py  paypal_service.py  product_service.py  report_service.py  role_service.py  stock_service.py  user_service.py  wishlist_service.py
back/tests/: conftest.py  test_v1_my_routes.py
(+106 files in other folders)
